--- a/src/app/components/admin-menu/admin-menu.component.html
+++ b/src/app/components/admin-menu/admin-menu.component.html
@@ -10,8 +10,8 @@
       </button>
       <div class="collapse show" id="home-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-          <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Ders Ekle</a></li>
-          <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Ders Sil</a></li>
+          <li><a class="link-body-emphasis d-inline-flex text-decoration-none rounded">Ders Ekle</a></li>
+          <li><a class="link-body-emphasis d-inline-flex text-decoration-none rounded">Ders Güncelle</a></li>
         </ul>
       </div>
     </li>
