--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -5,8 +5,8 @@
 
 
 <div class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0" style="margin-left: 100px;">
-    <p class="card-title">{{userTypeName}}<p>
-    //Buraya Kullanıcı Bilgileri Getirilecek
+    <!--<p class="card-title">{{userTypeName}}<p>-->
+    
 </div>
 
 
