--- a/src/app/components/prelector/prelector.component.html
+++ b/src/app/components/prelector/prelector.component.html
@@ -1,3 +1,4 @@
+<app-profile></app-profile>
 <div *ngIf="activeUser.userTypeId == 2" class = "container">
     <div class="row">
         <div class="col-md-3">
