--- a/src/app/components/student/student.component.html
+++ b/src/app/components/student/student.component.html
@@ -1,3 +1,4 @@
+<app-profile></app-profile>
 <div *ngIf="activeUser.userTypeId == 3" class = "container">
     <div class="row">
         <div class="col-md-3">
